--- a/css/style.css
+++ b/css/style.css
@@ -2207,6 +2207,7 @@ li.breadcrumb-item a {
 .wbnrfz_details .banner-eicw img {
     width: 100%;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .breadcrumb-area-eicw-subs {
