--- a/css/style.css
+++ b/css/style.css
@@ -2216,6 +2216,12 @@ li.breadcrumb-item a {
     height: 50vh;
 }
 
+.breadcrumb-area-eicw-backCover {
+    position: relative;
+    z-index: 1;
+    height: 100vh;
+}
+
 
 .breadcrumb-area-eicw-subs {
     position: relative;
