--- a/css/style.css
+++ b/css/style.css
@@ -2247,6 +2247,12 @@ h2.page-title {
     padding: 0px !important;
 }
 
+.jumplists {
+    background-color: #f5f6f2;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 
 /* ------------------------------------------ */
 
