2025-02 Cumulative Update for Version 2501 (4.4.40)

--- a/css/style.css
+++ b/css/style.css
@@ -1987,7 +1987,7 @@ h3.heading {
 }
 
 blockquote {
-    background-color: #e9eae5;
+    background-color: #d9d9d8;
     padding: 2em;
     color: #000;
     border-radius: 1em;
