2025-02 Cumulative Update for Version 2501 (4.4.40)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -9,6 +9,7 @@
     - 2.0 About Page
     - 3.0 Indiv Pages
     - 4.0 Blog Page(s)
+    - 5.0 EICW
 --------------------------------------------- */
 
 /* ------------------------------------------ General ------------------------------------------ */
@@ -212,6 +213,10 @@ body.dark-mode .wbnrfz_details .details_catagory_wrap .single_catagory .social_l
     color: #fff;
 }
 
+body.dark-mode .btn.show {
+    color: #fff;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 4.0 Blog Page(s) ------------------------------------------ */
@@ -243,7 +248,7 @@ body.dark-mode blockquote {
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ x.x EICW ------------------------------------------ */
+/* ------------------------------------------ 5.0 EICW ------------------------------------------ */
 body.dark-mode .wbnrfz-summ-micro {
     background-color: #1e1e1e;
     transition: all 0.5s ease;
