--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -95,6 +95,10 @@ body.dark-mode .footer-content .social-info a {
     color: #fff;
 }
 
+body.dark-mode .cookiebanner span {
+    color: #000;
+}
+
 /* ---- */
 
 /* ---- Progress Bar */
