--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -46,7 +46,44 @@ body.dark-mode .wbnrfz_btn_theme {
     color: #fff;
 }
 
+body.dark-mode .wbnrfz_btn_theme:hover {
+    background-color: #80a8cc;
+    color: #fff;
+}
+
 /* ---- */
+body.dark-mode #hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/bg-img/hero-bg-dark.png") top right no-repeat;
+    background-size: cover;
+    position: relative;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode #hero:before {
+    content: "";
+    background-color: #000000d4;
+    backdrop-filter: blur(2px);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+body.dark-mode .bg-overlay::after {
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #000000d4;
+    backdrop-filter: blur(2px);
+}
+
 
 body.dark-mode h1,
 body.dark-mode h2,
@@ -70,12 +107,31 @@ body.dark-mode #scrollUp {
 
 @keyframes pulse-animation {
     0% {
-      box-shadow: 0 0 0 0px #8d8d8d6b;
+        box-shadow: 0 0 0 0px #8d8d8d6b;
     }
+
     100% {
-      box-shadow: 0 0 0 20px #00000000;
+        box-shadow: 0 0 0 20px #00000000;
     }
-  }
+}
+
+body.dark-mode .classy-nav-container {
+    background-color: transparent;
+    padding: 0;
+}
+
+body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #fff;
+    font-weight: 500;
+    padding: 0 20px;
+    cursor: pointer;
+}
+
+body.dark-mode .main-header-area.sticky {
+    background-color: #171717;
+}
 
 /* ---- */
 
@@ -169,6 +225,13 @@ body.dark-mode .follow-area {
 
 body.dark-mode .skill-ara .single-skill .progress-count p {
     color: #fff;
+}
+
+body.dark-mode .profile-desc {
+    color: #898a77;
+    font-size: 20px;
+    font-weight: normal;
+    cursor: default;
 }
 
 /* ------------------------------------------ */
