--- a/css/style.css
+++ b/css/style.css
@@ -1847,7 +1847,8 @@ h1.brc {
 
 .wbnrfz_details_section img:hover,
 .banner-eicw img:hover,
-.cp-img:hover {
+.cp-img:hover,
+.column-pic:hover {
     transform: scale(1.03);
     transition: transform 0.8s cubic-bezier(0.25, 0.8, 0.25, 1), filter 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
     /* Smooth transition */
