--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ input:required {
     width: 46px;
     height: 46px;
     bottom: 60px;
-    background-color: #8c8e75;
+    background-color: #ae7356;
     color: #fff;
     text-align: center;
     transition-duration: 500ms;
