2025-05 Cumulative Update for Version 2505 (5.0.12)

--- a/css/style.css
+++ b/css/style.css
@@ -1520,7 +1520,7 @@ li.breadcrumb-item.active a {
 .pw-portfolio-area .container-fluid {
     padding-right: 5%;
     padding-left: 5%;
-    background-color: #f8faf4;
+    background-color: #f6f7f2;
 }
 
 .pw-projects-menu {
