--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ ul li {
     left: 0;
     z-index: -1;
     background-color: #e5e5e5b7;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
 }
 
 .row {
@@ -2556,7 +2556,11 @@ select:focus {
 #icon-assets,
 #brainstorm,
 #psrith,
-#cckint {
+#cckint,
+#br-diag,
+#bat,
+#tv,
+#staris2 {
     scroll-margin-top: 10vh;
 }
 
