--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -647,6 +647,14 @@
 /* ---- */
 
 /* ------------------------------------------ 2.0 Width Breakpoints ------------------------------------------ */
+
+/* ---- 2.0.1 Min Width: 1200px */
+@media (min-width: 1200px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+}
+
 /* ---- 2.0.1 Min Width: 992px Max Width: 1199px */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     img.profile-pic {
