--- a/css/style.css
+++ b/css/style.css
@@ -3468,6 +3468,7 @@ li.breadcrumb-item a:hover {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     color: #000;
     font-size: 0.85rem;
+    cursor: default;
 }
 
 /* ------------------------------------------*/
