2025-11 Feature Update for Version 2511 (6.0.0)

--- a/css/style.css
+++ b/css/style.css
@@ -2537,6 +2537,7 @@ select:focus {
 #bat,
 #tv,
 #staris2,
+#cddbp,
 #bcr,
 #changes,
 #tooSoon,
@@ -3483,8 +3484,10 @@ li.breadcrumb-item a:hover {
     padding: 2em 0;
     max-width: 1400px;
     overflow: visible;
-    padding-left: 4vw;   /* Added for responsiveness */
-    padding-right: 4vw;  /* Added for responsiveness */
+    padding-left: 4vw;
+    /* Added for responsiveness */
+    padding-right: 4vw;
+    /* Added for responsiveness */
 }
 
 .carousel-cell {
