--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,22 @@ ul li {
     line-height: 30px;
 }
 
+  .responsive-iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 40%; /* 1280/512 = 2.5, so 40% for 2.5:1 aspect ratio */
+    height: 0;
+    overflow: hidden;
+  }
+  .responsive-iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
 img.mfp-img {
     -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
     box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
