2025-11 Cumulative Update for Version 2511 (6.0.8)

--- a/css/style.css
+++ b/css/style.css
@@ -191,21 +191,23 @@ ul li {
     line-height: 30px;
 }
 
-  .responsive-iframe-container {
+.responsive-iframe-container {
     position: relative;
     width: 100%;
-    padding-bottom: 40%; /* 1280/512 = 2.5, so 40% for 2.5:1 aspect ratio */
+    padding-bottom: 40%;
+    /* 1280/512 = 2.5, so 40% for 2.5:1 aspect ratio */
     height: 0;
     overflow: hidden;
-  }
-  .responsive-iframe-container iframe {
+}
+
+.responsive-iframe-container iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: 0;
-  }
+}
 
 img.mfp-img {
     -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
@@ -3026,9 +3028,8 @@ li.breadcrumb-item a:hover {
 }
 
 .navbar {
-    background: #ffffffc9;
+    background: #fdfdfda2;
     backdrop-filter: blur(25px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 50px;
     padding: 10px 25px;
     display: flex;
