--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -619,17 +619,15 @@ body.dark-mode .scrollable-tabs-container a.active {
 /* ------------------------------------------ 9.0 Navigation ------------------------------------------ */
 
 body.dark-mode .navbar {
-    background: #000000a9;
+    background: #0e0e0e91;
     backdrop-filter: blur(25px);
-    border: 1px solid #0c0c0c60;
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
     border-radius: 50px;
     padding: 10px 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow:
-        0 20px 40px rgba(0, 0, 0, 0.1),
-        inset 0 1px 0 rgba(31, 31, 31, 0.2);
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     position: relative;
     overflow: hidden;
