--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@
 --------------------------------------------- */
 
 /* ------------------------------------------ Import ------------------------------------------*/
-/* @import url('https://fonts.googleapis.com/css2?family=Google Sans Flex:wght@100..900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Google Sans Flex:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
 @import url(bootstrap.min.css);
 @import url(animate.css);
 @import url(owl.carousel.min.css);
@@ -58,7 +57,7 @@ body {
 
 
 body {
-    font-family: "Google Sans Flex", sans-serif;
+    font-family: "Onest", sans-serif;
     background: #ececea;
     min-height: 100vh;
     padding: 0;
@@ -73,7 +72,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Google Sans Flex", sans-serif;
+    font-family: "Onest", sans-serif;
     color: #252525;
     line-height: 1.3;
     font-weight: 600;
@@ -801,7 +800,7 @@ header {
     color: #45505b;
     margin: 15px 0 0 0;
     font-size: 26px;
-    font-family: 'Google Sans Flex', sans-serif;
+    font-family: 'Onest', sans-serif;
     cursor: default;
 }
 
@@ -1654,7 +1653,7 @@ img.profile-pic {
     font-size: 16px;
     color: #828793;
     font-weight: 400;
-    font-family: "Google Sans Flex", sans-serif;
+    font-family: "Onest", sans-serif;
     display: block;
     margin-bottom: 6px;
 }
