--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,7 @@ input:required {
     box-shadow: none;
 }
 
-.pw-btn {
+.pw-btn, .pw-btn-next {
     position: relative;
     z-index: 1;
     min-width: 160px;
@@ -557,12 +557,39 @@ input:required {
     border: none;
 }
 
-.pw-btn.btn-2 {
+.pw-btn-prev {
+    position: relative;
+    z-index: 1;
+    min-width: 160px;
+    height: 46px;
+    line-height: 46px;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+    padding: 0 30px;
+    margin-right: 3em;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: #366ca7;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    color: #252525;
+    border-radius: 60px;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: none;
+}
+
+.pw-btn.btn-2,
+.pw-btn-next.btn-2,
+.pw-btn-prev.btn-2 {
     color: #fff;
 }
 
 .pw-btn:focus,
 .pw-btn:hover,
+.pw-btn-next:focus,
+.pw-btn-next:hover,
+.pw-btn-prev:focus,
+.pw-btn-prev:hover,
 .wbnrfz_btn:focus,
 .wbnrfz_btn:hover {
     font-weight: 500;
