--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -332,6 +332,10 @@
     .navbar-container {
         width: calc(100% - 30px);
     }
+
+    .bs-name {
+        text-align: left;
+    }
 }
 
 /* ---- */
