--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -825,7 +825,8 @@ body.dark-mode .bus-stop-code:hover {
     color: #a4c5e2 !important;
 }
 
-body.dark-mode .list-group-item:first-child, .list-group-item:last-child {
+body.dark-mode .list-group-item:first-child,
+.list-group-item:last-child {
     transition-duration: 800ms;
     border-radius: 20px;
     margin-top: 1em;
@@ -845,4 +846,38 @@ body.dark-mode .list-group-item:hover {
     background-color: #334250;
     transform: translateY(-2px);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+/*  */
+body.dark-mode .card-bz {
+    background-color: #2e2e2e;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+    padding: 1em;
+    text-align: center;
+    flex: 1 1 calc(20% - 1em);
+    cursor: default;
+    transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+
+body.dark-mode .card-bz:hover {
+    background-color: #334250;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+body.dark-mode .btn-toPin {
+    background-color: #494949;
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    color: #fff;
+}
+
+/*  */
+body.dark-mode .list-group-item.active {
+    z-index: 2;
+    color: #000;
+    background-color: #52718d;
 }
