--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -885,3 +885,24 @@ body.dark-mode .list-group-item.active {
 body.dark-mode .lg-date {
     color: #dbdbdb;
 }
+
+body.dark-mode .pin-msg {
+    background-color: #222222;
+    color: #fff !important;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+body.dark-mode .pinned p {
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+}
