--- a/css/style.css
+++ b/css/style.css
@@ -2866,7 +2866,7 @@ li.breadcrumb-item a:hover {
 .form-control {
     display: block;
     width: 100%;
-    padding: .375rem .75rem;
+    padding: 0.775rem 1.75rem;
     margin-top: 5px;
     font-size: 1rem;
     font-weight: 400;
