--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1265,8 +1265,17 @@
     }
 
     .bus-time {
+        width: 160px;
+        text-align: center;
         margin-right: 0em;
         font-size: 16px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+    }
+
+    .bus-time img {
+        width: 35px !important;
+        height: 22px !important;
     }
 
     table th {
