--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -271,11 +271,11 @@ body.dark-mode .about-me-summ {
 }
 
 body.dark-mode .about-me-summary {
-    background-color: #2e2e2e;
     color: #fff;
     transition: all 0.5s ease;
+    background-color: #2e2e2e;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .about-me-summary:hover {
@@ -284,11 +284,11 @@ body.dark-mode .about-me-summary:hover {
 }
 
 body.dark-mode .port-summary {
-    background-color: #2e2e2e;
     color: #fff;
     transition: all 0.5s ease;
+    background-color: #2e2e2e;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .port-summary:hover {
@@ -431,10 +431,10 @@ body.dark-mode li.breadcrumb-item a {
 /* ------------------------------------------ 6.0 Timeline ------------------------------------------ */
 
 body.dark-mode .timeline-item {
-    background-color: #2e2e2e;
     transition: all 0.5s ease;
+    background-color: #2e2e2e;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .timeline-item:hover {
@@ -458,9 +458,10 @@ body.dark-mode #sort-options {
     background-size: 10px;
     padding-right: 30px;
     padding-left: 15px;
-    background-color: #494949;
-    border: 1px solid #000;
     color: #fff;
+    background-color: #2e2e2e;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .wbnrfz-summ {
@@ -550,12 +551,12 @@ body.dark-mode .form-control {
     width: 100%;
     color: #fff;
     appearance: none;
-    background: #494949;
+    background: #2e2e2e;
     background-clip: padding-box;
     border-radius: 25px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .form-control::placeholder {
@@ -570,13 +571,13 @@ body.dark-mode .form-control::placeholder {
 body.dark-mode .scrollable-tabs-container a {
     color: #fff;
     text-decoration: none;
-    background: #494949;
     padding: 12px 14px;
     display: inline-block;
     border-radius: 24px;
     white-space: nowrap;
+    background-color: #494949;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .scrollable-tabs-container a:hover {
@@ -770,7 +771,7 @@ body.dark-mode .flickity-prev-next-button .arrow {
     fill: #fff !important;
 }
 
-/* ------------------------------------------*/
+/* ----------------Table ART----------------------*/
 
 body.dark-mode .table {
     border: 1px solid #000;
@@ -799,7 +800,7 @@ body.dark-mode .arrival-now {
 }
 
 body.dark-mode .bus-stop {
-    background-color: #222222;
+    background-color: #2e2e2e;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -883,7 +884,7 @@ body.dark-mode .lg-date {
 }
 
 body.dark-mode .pin-msg {
-    background-color: #222222;
+    background-color: #2e2e2e;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -906,5 +907,11 @@ body.dark-mode .pinned p {
 body.dark-mode .alert-warning {
     background-color: #332701;
     color: #ffda6a;
-    border-color:  #997404;
+    border-color: #997404;
+}
+
+body.dark-mode .btn-busloc {
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    color: #fff;
 }
