--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -80,6 +80,7 @@
     .single_gallery_item {
         flex: 1 1 calc(33.33% - 20px);
         max-width: calc(33.33% - 20px);
+        padding: 1em;
     }
 
     .portfolio-sort {
@@ -636,7 +637,7 @@
 /* ---- 1.0.10 Max Width: 450px */
 @media (max-width: 450px) {
     .btn {
-        width: 130px;
+        width: 70px;
     }
 
     .light:after {
@@ -648,6 +649,42 @@
         line-height: 1.2;
         margin: 0 auto;
         max-width: 100%;
+    }
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 22px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 15px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description-title {
+        font-size: 25px;
     }
 }
 
