--- a/css/style.css
+++ b/css/style.css
@@ -1381,6 +1381,7 @@ h4.timeline-date-aa {
     flex: 1 1 calc(25% - 15px);
     max-width: calc(25% - 15px);
     box-sizing: border-box;
+    padding: 1em;
 }
 
 .pw-portfolio-area .container-fluid {
@@ -3032,7 +3033,7 @@ li.breadcrumb-item a:hover {
     top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1000;
+    z-index: 1010;
     width: calc(100% - 80px);
     max-width: 1700px;
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -3604,7 +3605,7 @@ img.mfp-img {
     display: none !important;
 }
 
-/* ------------------------------------------*/
+/* ----------------Table ART--------------------------*/
 .table {
     border-collapse: separate;
     border-spacing: 0;
@@ -3650,7 +3651,7 @@ table th {
 
 .svcNum {
     background-color: #94d40b;
-    border-radius: 5px;
+    border-radius: 25px;
     color: #000;
     font-weight: bold;
 }
@@ -3724,11 +3725,16 @@ table th {
     display: flex;
     align-items: center;
     gap: 8px;
+        background-color: #2e2e2e;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 0.5em;
+    border-radius: 15px;
 }
 
 .fleet-icon {
     width: 50px;
-    height: 20px;
+    height: auto;
     object-fit: contain;
 }
 
@@ -4032,6 +4038,24 @@ table th {
     background-color: #ffffff4d;
 }
 
+.btn-busloc {
+    background-color: #de652e;
+    color: #fff;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #cccccc;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.btn-busloc:disabled {
+    background-color: #3d3d3d;
+    color: #535353;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #cccccc;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
 
 .bz-btn.btn-2,
 .btn-unpin.btn-2,
@@ -4044,7 +4068,9 @@ table th {
 .btn-unpin:focus,
 .btn-unpin:hover,
 .btn-toPin:focus,
-.btn-toPin:hover {
+.btn-toPin:hover,
+.btn-busloc:focus,
+.btn-busloc:hover {
     font-weight: 500;
     background-color: #6d99c0 !important;
     color: #fff;
@@ -4136,3 +4162,5 @@ table th {
     color: #6c757d;
     font-size: 17px;
 }
+
+/* ---------------Card ART---------------------------*/
