--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -915,3 +915,23 @@ body.dark-mode .btn-busloc {
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
     color: #fff;
 }
+
+body.dark-mode .fleet-legend span {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #2e2e2e;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 0.5em;
+    border-radius: 15px;
+}
+
+body.dark-mode .btn-busloc:disabled {
+    background-color: #3d3d3d;
+    color: #535353;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #2b2b2b;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
