--- a/css/style.css
+++ b/css/style.css
@@ -3725,7 +3725,7 @@ table th {
     display: flex;
     align-items: center;
     gap: 8px;
-        background-color: #2e2e2e;
+        background-color: #ffffff;
         border: 1px solid #2b2b2b33;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 0.5em;
@@ -4048,7 +4048,7 @@ table th {
 }
 
 .btn-busloc:disabled {
-    background-color: #3d3d3d;
+    background-color: #cecece;
     color: #535353;
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     border: 1px solid #cccccc;
