--- a/css/style.css
+++ b/css/style.css
@@ -3711,23 +3711,19 @@ table th {
 
 .fleet-legend {
     display: flex;
-    gap: 20px;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 10px;
-    font-size: 15px;
-    color: #000;
-    padding-bottom: 20px;
-    cursor: default;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: left;
+    margin-top: 1em;
+    padding-bottom: 1em;
 }
 
 .fleet-legend span {
     display: flex;
     align-items: center;
     gap: 8px;
-        background-color: #ffffff;
-        border: 1px solid #2b2b2b33;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 0.5em;
     border-radius: 15px;
 }
